# python-backend-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.cursor/: rules
.cursor/rules/project/: mainrules.mdc
app/: __main__.py  app.py  config.py  dependencies.py  types.py  version.py
app/cli/: __init__.py  cli.py  clickhouse.py  cron.py  db.py  run.py  utils.py
app/core/: __init__.py  config.py
app/core/api_clients/: __init__.py
app/core/dependencies/: providers.py
app/core/entities/: __init__.py  example.py
app/core/enums/: __init__.py
app/core/exceptions/: common.py  example.py
app/core/repositories/: example.py
app/dependencies/: constructors.py  providers.py
app/implementations/repositories/: example.py
app/lib/: __init__.py  app.py  fastapi_app.py
app/lib/api_client/: __init__.py  base.py  exception.py
app/lib/config/: idempotency.py  redis.py  server.py  sqlalchemy.py
app/lib/cron/: __init__.py  base.py
app/lib/dependencies/: idempotency.py  redis.py  sqlalchemy.py
app/lib/enums/: filter.py  redis.py
app/lib/exceptions/: __init__.py  base.py  filter.py  handler.py  idempotency.py
app/lib/middlewares/: faststream_opentelemetry.py  idempotency.py  idempotent_request.py  request_id.py
app/lib/models/: __init__.py  base.py  mixins.py
app/lib/observability/: config.py  fastapi.py  setup.py
app/lib/queries/: base.py
app/lib/repositories/: __init__.py  base.py  db_context.py  in_memory_db_context.py  sa_db_context.py
app/lib/schemas/: __init__.py  base.py  clickhouse.py  common.py  exceptions.py  fields.py  pagination.py  validators.py
app/lib/services/: __init__.py  jwt.py
app/lib/utils/: __init__.py  filter.py  http_scheme.py  log.py  multisort.py  openapi.py  pagination.py  sa_specification.py  sentry.py  specification.py  url.py
app/middlewares/: __init__.py
app/models/: __init__.py
app/routers/: __init__.py  health.py  router.py
app/routers/middlewares/: __init__.py  idempotent_request.py  request_id.py
app/routers/queues/: __init__.py  router.py
app/routers/v1/: __init__.py  example.py  ping.py  router.py
app/schemas/: example.py
app/services/: example.py
deployment/: docker-compose.local.yml
migrations/: clickhouse.py  env.py
migrations/ch_versions/: __init__.py  base.py
tests/: conftest.py
tests/integration/: conftest.py
tests/unit/: conftest.py
